--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-sentry-sdk
-openpyxl
-xlrd
-xlwt
-pysftp
-pygount>1.2.1
+# generated from manifests external_dependencies
 acme
 cryptography
-dnspython
+dnspython==1.16.0
 josepy
+lxml
+openpyxl
+pygount
+pysftp
+sentry_sdk
+xlrd
+xlwt
