--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,8 +36,18 @@ jobs:
       matrix:
         include:
           - container: ghcr.io/oca/oca-ci/py3.10-odoo17.0:latest
+            include: "database_cleanup"
+            makepot: "true"
+            name: Rebel test with Odoo
+          - container: ghcr.io/oca/oca-ci/py3.10-ocb17.0:latest
+            include: "database_cleanup"
+            name: Rebel test with OCB
+          - container: ghcr.io/oca/oca-ci/py3.10-odoo17.0:latest
+            exclude: "database_cleanup"
+            makepot: "true"
             name: test with Odoo
           - container: ghcr.io/oca/oca-ci/py3.10-ocb17.0:latest
+            exclude: "database_cleanup"
             name: test with OCB
             makepot: "true"
     services:
@@ -49,6 +59,9 @@ jobs:
           POSTGRES_DB: odoo
         ports:
           - 5432:5432
+    env:
+      INCLUDE: "${{ matrix.include }}"
+      EXCLUDE: "${{ matrix.exclude }}"
     steps:
       - uses: actions/checkout@v3
         with:
