[16.0][FIX] Prevent lxml import error

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@
 astor
 cryptography
 dataclasses
-lxml
+lxml==4.6.5 ; python_version <= '3.10'  # min version = 4.5.0 (Focal - with security backports)
+lxml==4.9.2 ; python_version > '3.10'
 mako
 odoo_test_helper
 odoorpc
