[IMP] letsencrypt: pre-commit stuff

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 # generated from manifests external_dependencies
+acme<2.0.0
 astor
 cryptography
 dataclasses
+dnspython
+josepy
 mako
 odoo_test_helper
 odoorpc
